<resources>
    <string name="app_name">Affirmation</string>
    <string name="back">На главную</string>
    <string name="FGirls">Для девушек</string>
    <string name="Girls">Для девушек и женщин</string>
    <string name="_10">Эти 10 лучших аффирмаций для женщин направлены на повышение сексуальности, и принятие себя. Некоторые из них основываются на трудах Натальи Правдиной, которая проделала большую работу в изучении данного вопроса.</string>
    <string name="_1">1. Я счастлива, что родилась женщиной. Я излучаю внутренний свет и положительную энергетику.</string>
    <string name="_2">2. Я люблю себя такой, какая есть. Полностью и безоговорочно принимаю себя.</string>
    <string name="_3">3. Я уникальна, прекрасна, молода, энергична и сексуальна.</string>
    <string name="_4">4. Я привлекаю внимание и притягиваю любовь мужчин.</string>
    <string name="_5">5. Я постоянно самосовершенствуюсь, и становлюсь лучше с каждой минутой.</string>
    <string name="_6">6. Я мудрая, уверенная в себе, и независимая.</string>
    <string name="_7">7. Я получаю все, что захочу. Вселенная любит меня. Я достойна счастья.</string>
    <string name="_8">8. Я отвечаю за свою жизнь, и полностью контролирую ее.</string>
    <string name="_9">9. Я самодостаточная и гармоничная личность. У меня есть деньги, здоровье и вдохновение реализовать все задуманное.</string>
    <string name="_10g">10. У меня есть все, что мне нужно: финансы, здоровье, красота, любовь.</string>
    <string name="eg">Регулярно проговаривайте эти фразы, и вы быстро заметите положительные изменения.</string>
    <string name="Guy">Для парней и мужчин</string>
    <string name="gi">Регулярное повторение этих установок поможет мужчине прокачать любую жизненную сферу.</string>
    <string name="g10">10. Я каждую секунду наполняюсь энергией, и становлюсь еще лучше.</string>
    <string name="g9">9. Я успешный и энергичный, поэтому добиваюсь всего, чего пожелаю.</string>
    <string name="g8">8. Мое тело мощное, сильное, здоровое и красивое.</string>
    <string name="g7">7. Вселенная помогает и покровительствует мне: каждый день я получаю множество возможностей для самовыражения, и реализации своих жизненных целей.</string>
    <string name="g6">6. Природа наделила меня крепким здоровьем, острым умом и красотой.</string>
    <string name="g5">5. Я здоровый, сильный, независимый, успешный и счастливый.</string>
    <string name="g4">4. Я умный, красивый, успешный и богатый.</string>
    <string name="g3">3. Обеспечиваю свою семью всем, что им нужно, и живу в полном достатке.</string>
    <string name="g2">2. Я нравлюсь женщинам: привлекаю к себе их внимание и любовь.</string>
    <string name="g1">1. Я успешный и самодостаточный.</string>
    <string name="g">Эти мощные аффирмации направлены на успех, привлечение денег, и повышение самооценки у мужчин.</string>
    <string name="dos">На достаток</string>
    <string name="proc">На процветание</string>
    <string name="usp">На успех</string>
    <string name="udac">На удачу</string>
    <string name="zdorov">Для здоровья</string>
    <string name="lubov">Для любви</string>
    <string name="hudoy">Для похудения</string>
    <string name="kd">На каждый день</string>
    <string name="fgg">Для парней</string>
    <string name="d">Для привлечения денег и достатка</string>
    <string name="dd">Эти аффирмации направлены на привлечение денег, финансового благополучия и материальной независимости.</string>
    <string name="d1">1. Я заслуживаю, и поэтому получаю все, что хочу.</string>
    <string name="d2">2. Я притягиваю к себе деньги, они любят меня, и легко приходят в мою жизнь.</string>
    <string name="d3">3. Я могу заработать намного больше, чем требуется.</string>
    <string name="d4">4. Я обеспечиваю всеми благами себя и близких мне людей.</string>
    <string name="d5">5. Я независим финансово, и контролирую свои доходы.</string>
    <string name="d6">6. Я притягиваю удачу, деньги любят меня. Я творческий человек с большими перспективами.</string>
    <string name="d7">7. Я все успеваю и отлично организовываю рабочий процесс.</string>
    <string name="d8">8. Я отличный работник и получаю за это щедрое вознаграждение.</string>
    <string name="d9">9. Я отличный специалист в своей области: легко и с радостью выполняю работу, и получаю достойную оплату.</string>
    <string name="d10">10. Моя жизнь наполнена изобилием ресурсов, возможностей и финансов.</string>
    <string name="dv">Выберите наиболее подходящую для себя установку, и произносите ее регулярно.</string>
    <string name="bac">На главную</string>
    <string name="ed">Аффирмации на каждый день</string>
    <string name="edd">Эти установки вы можете применять сутра, чтобы сделать свой день еще лучше.</string>
    <string name="ed1">1. Этот мой лучший день.</string>
    <string name="ed2">2. Я полон жизненной энергии.</string>
    <string name="ed3">3. Меня переполняет радость и любовь к людям, а они отвечают мне взаимностью.</string>
    <string name="ed4">4. Сегодня я неотразима: прекрасно выгляжу, излучаю позитив, полна сил для грандиозных свершений.</string>
    <string name="ed5">5. Этот день продуктивен, и приносит мне истинное удовольствие.</string>
    <string name="ed6">6. Я наслаждаюсь каждой минутой, ведь она неповторима.</string>
    <string name="ed7">7. Я излучаю счастье, радость и успех.</string>
    <string name="ed8">8. Я благодарна за каждый день моей жизни, ведь она прекрасна.</string>
    <string name="ed9">9. Мои намерения чисты. Я отказываюсь от негатива и разрушительных мыслей.</string>
    <string name="ed10">10. В моем сердце живет любовь, я прощаю все обиды и настроена на успех и процветание.</string>
    <string name="edv">Воспользуйтесь этими мощными аффирмациями, и сделайте свою жизнь еще лучше.</string>
    <string name="ml">На привлечение любви</string>
    <string name="ll">Мы собрали лучшие позитивные установки, именно на эти источники в интернете наибольшее количество позитивных отзывов.</string>
    <string name="l1">1. Я наполнен(а) внутренним светом и любовью.</string>
    <string name="l2">2. Я искренне люблю всех вокруг, и мне отвечают взаимностью.</string>
    <string name="l3">3. Я счастлив(а) в личных отношениях и удовлетворен в интимной сфере.</string>
    <string name="l4">4. У меня отличный партнер: он вдохновляет меня, поддерживает и понимает.</string>
    <string name="l5">5. Я счастлив(а) каждый день любить и быть любимым(ой). Я испытываю радость познания себя и своей половинки.</string>
    <string name="l6">6. Любовь переполняет меня. Я открыт(а) для новых отношений и эмоций.</string>
    <string name="l7">7. Я вдохновляю своего партнера и восхищаюсь им. Я счастлив(а) быть с этим человеком.</string>
    <string name="l8">8. Я получаю удовольствие от интимных отношений и общения со своей второй половинкой. Я заслуживаю любви, и излучаю ее каждой клеточкой своего тела.</string>
    <string name="l9">9. Я с радостью отдаюсь своему партнеру и получаю от него взаимность. Мы восторгаемся друг — другом.</string>
    <string name="l10">10. Я безмерно счастлив(а).</string>
    <string name="lv">Данные установки подходят как для мужчин, так и для женщин. Регулярно произносите эти аффирмации, и в скором времени заметите положительные изменения в своей личной жизни и интимной сфере.</string>
    <string name="u">Для привлечения удачи</string>
    <string name="uu">Чтобы везение всегда сопутствовало вам, используйте эти тексты аффирмаций.</string>
    <string name="u1">1. Удача всегда следует за мной.</string>
    <string name="u2">2. Мне везет в любом начинании. Я уверенно смотрю в будущее.</string>
    <string name="u3">3. Я счастливчик, ведь вселенная любит меня.</string>
    <string name="u4">4. Я получаю все блага, которые мне нужны, так как удача сопутствует мне.</string>
    <string name="u5">5. Я привлекаю успех и удача всегда на моей стороне.</string>
    <string name="u6">6. Я точно знаю, как поступать, чтобы добиться успеха и процветания в жизни.</string>
    <string name="u7">7. Я полностью принимаю и понимаю себя. Это позволяет мне быть всегда успешным и удачливым.</string>
    <string name="u8">8. Я добился успеха, и удовлетворен этим.</string>
    <string name="u9">9. Я уверен, что удача будет всегда следовать за мной.</string>
    <string name="u10">10. Успех – это мое каждодневное состояние, которое мне приносит радость.</string>
    <string name="uv">Эти аффирмации для привлечения удачи подойдут и для мужчин, и для женщин.</string>
    <string name="p">Для эффективного похудения</string>
    <string name="pp">Чтобы ускорить процесс избавления от лишних килограммов, применяйте следующие положительные установки.</string>
    <string name="p1">1. Я прекрасна: у меня стройное тело и идеальная фигура.</string>
    <string name="p2">2. Я быстро и легко худею, и испытываю удовольствие от этого.</string>
    <string name="p3">3. Мои килограммы тают на глазах, как снег на теплом весеннем солнце.</string>
    <string name="p4">4. Я люблю и принимаю себя.</string>
    <string name="p5">5. Я стройный, подтянутый, накачанный. Мне комфортно в моем весе.</string>
    <string name="p6">6. Я легко сбрасываю вес, и доволен своим результатом.</string>
    <string name="p7">7. Я идеальна, а мой вес в норме.</string>
    <string name="p8">8. Я мало ем и чувствую себя сытой и удовлетворенной.</string>
    <string name="p9">9. Я эффективно тренируюсь. Занятия спортом приносят мне истинное наслаждение и сжигают массу калорий.</string>
    <string name="p10">10. Я стабильно сбрасываю вес. Каждый день мое тело выглядит все лучше, и лучше.</string>
    <string name="pv">Начиная процесс похудения, выберите для себя подходящие установки, и настройтесь на положительный результат.</string>
    <string name="pr">На процветание</string>
    <string name="prr">Эти аффирмации можно использовать каждый день, чтобы улучшить в целом качество жизни.</string>
    <string name="pr1">1. Я успешный, счастливый и реализованный человек.</string>
    <string name="pr2">2. Мне всего хватает. Я контролирую ситуацию, и в целом свою жизнь. Легко и с удовольствием забочусь о близких людях.</string>
    <string name="pr3">3. Вселенная любит меня и предоставляет массу возможностей каждый день.</string>
    <string name="pr4">4. У меня все под контролем: здоровье, карьера, финансы, личная жизнь.</string>
    <string name="pr5">5. Все мои начинания успешны, а мечты сбываются.</string>
    <string name="pr6">6. Все что я захочу, реализовывается.</string>
    <string name="pr7">7. Я могу все. Мое сердце переполняют радость и счастье.</string>
    <string name="pr8">8. Я получаю все, что мне нужно, и даже больше. Каждый день наполнен радостью и новыми впечатлениями.</string>
    <string name="pr9">9. Мне всегда везет, Бог любит и заботится обо мне.</string>
    <string name="pr10">10. Я спокоен, сосредоточен, взвешенно принимаю решения и они всегда верные.</string>
    <string name="prV">Выберите наиболее подходящую для себя установку, и произносите ее регулярно.</string>
    <string name="us">На привлечение успеха</string>
    <string name="uss">Если вы хотите быть успешным и добиться лучших результатов, вам помогут следующие установки.</string>
    <string name="us1">1. Сегодня у меня есть множество возможностей проявить себя. Все сложится наилучшим образом.</string>
    <string name="us2">2. Мне всегда везет. Успех сопутствует мне в любых начинаниях.</string>
    <string name="us3">3. Я получаю все, что хочу.</string>
    <string name="us4">4. Я успешен, ведь Бог любит меня.</string>
    <string name="us5">5. Я сильный морально и физически.</string>
    <string name="us6">6. Каждый вдох наполняет меня уверенность в себе, а выдох уносит страхи и сомнения.</string>
    <string name="us7">7. Во мне кипит неиссякаемая энергия. Я могу все.</string>
    <string name="us8">8. Я привлекаю в свою жизнь только открытых и позитивных людей.</string>
</resources>