<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a7"
    tools:context=".Affirmation.Pohudenie">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:text="@string/p"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView

            android:textSize="15sp"
            android:text="@string/pp"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p1"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p2"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p3"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p4"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p5"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p6"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p7"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p8"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p9"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="7dp"
            android:text="@string/p10"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/pv"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button

            android:layout_marginTop="30dp"
            android:id="@+id/back"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/but"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:layout_marginBottom="30dp"

            android:text="@string/back"
            android:textAlignment="center"

            android:textStyle="bold" />



    </LinearLayout>



</ScrollView>